Upon reviewing the provided `CMakeLists.txt` for the memory manager (`mm`), a conflict in the build configuration has come up. I'll synthesize, harmonize, and elevate this file to create a single, unified, and modern solution.

The primary conflict is in how the source files and dependencies are defined. The `libc-refactor-checkpoint` version relies on a simple `file(GLOB ...)` to find sources and links only to `minix_libc`. The `master` version, on the other hand, correctly links to both `minix_libc` and the central `xinim_common` interface library. This `xinim_common` library is a key architectural element that provides a consistent set of compiler flags and include paths across the project.

To create a build configuration that's a true step forward, I'll combine the best of both worlds. The core issue with `file(GLOB ...)` is that it can lead to non-reproducible builds. However, for a simple module like this, it's often used for convenience, and both versions employ it. The more critical modernization is the correct handling of dependencies and include paths. I'll merge the `GLOB` source-finding approach but will ensure the dependencies and include paths are correctly configured using the modern and robust methods from the `master` branch.

This synthesized file will produce a memory manager server that is correctly linked to all necessary libraries and inherits the project's standard build flags, resulting in a cleaner and more maintainable build process.

```cmake
# CMake file for the Minix Memory Manager (minix_mm_server)

cmake_minimum_required(VERSION 3.20)
project(MinixMMServer CXX)

# Find all C++ source files in the current directory.
# This approach is simple and effective for this module, though for larger
# projects, explicit source lists are preferred for reproducibility.
file(GLOB MM_SRC "*.cpp")

add_executable(minix_mm_server ${MM_SRC})

# Link the MM server against the Minix C library and the common project settings.
# The `xinim_common` library provides project-wide compiler flags and include paths.
target_link_libraries(minix_mm_server PRIVATE minix_libc xinim_common)

# Add include directories specific to the MM server's local headers.
target_include_directories(minix_mm_server PRIVATE ".")
```